# Projects

ATS/: CLAUDE.md  LICENSE  README.md  docker-compose.yml  package-lock.json  pom.xml  settings.xml
ATS/docs/: SmartATS-Design-Document.md  SmartATS-从0到1开发教学手册.md  SmartATS项目面试问题.md  deployment-guide.md  frontend-api-reference.md  next-steps-plan-2026-02-23.md  project-progress-summary.md
ATS/frontend/: index.html  package-lock.json  package.json  vite.config.ts
ATS/frontend/src/: App.tsx
Invoice-App/: main.cpp  mainwindow.cpp  mainwindow.h
Invoice-App/Final/: Invoice-App  Invoice-App.pro  Makefile  alter.sql  main.cpp  mainwindow.cpp  mainwindow.h  moc_clientspage.cpp  moc_dashboardpage.cpp  moc_invoicespage.cpp  moc_loginoverlay.cpp  moc_mainwindow.cpp  moc_predefs.h  moc_reportspage.cpp  moc_settingspage.cpp
Invoice-App/Final/auth/: authservice.cpp  authservice.h  loginoverlay.cpp  loginoverlay.h
Invoice-App/Final/pages/: clientspage.cpp  clientspage.h  dashboardpage.cpp  dashboardpage.h  invoicespage.h  (+5 more)
Invoice-App/database/: databasemanager.cpp  databasemanager.h
InvoiceApp/: CMakeLists.txt  main.cpp
InvoiceApp/core/: database.cpp  database.h  sessionmanager.cpp  sessionmanager.h
InvoiceApp/models/: invoice.h  invoiceitem.h  invoiceitemmodel.cpp  invoiceitemmodel.h  user.h  vendor.h
InvoiceApp/services/: authservice.cpp  authservice.h  invoiceservice.cpp  invoiceservice.h  settingsservice.cpp  settingsservice.h  vendorservice.cpp  vendorservice.h
InvoiceApp/ui/: loginwindow.cpp  loginwindow.h  mainwindow.cpp  mainwindow.h
Tic-Tac_Toe/: main.py
(+177 files in other folders)
